Login page with Semantic Ui 2

--- a/ThaiPham_Loginform_sematicUi/login.html
+++ b/ThaiPham_Loginform_sematicUi/login.html
@@ -24,27 +24,27 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="./login.css"/>
     <script src="./login.js"></script>
   </head>
   <body>
     <div class="ui container">
-        <div class="ui horizontal segments logincontainer">
-          <div class="ui segment">
-            <form class="ui form">
-              <div class="field">
-                <label>Username</label>
-                <input type="text" name="userName" />
-              </div>
-              <div class="field">
-                <label>Password</label>
-                <input type="password" name="passWord" />
-              </div>
-              <button class="fluid ui green button" type="submit">Login</button>
-              <div class="ui error message"></div>  
-            </form>
-          </div>
+      <div class="ui horizontal segments logincontainer">
+        <div class="ui segment">
+          <form class="ui form">
+            <div class="field">
+              <label>Username</label>
+              <input type="text" name="userName" />
+            </div>
+            <div class="field">
+              <label>Password</label>
+              <input type="password" name="passWord" />
+            </div>
+            <button class="fluid ui green button" type="submit">Login</button>
+            <div class="ui error message"></div>
+          </form>
         </div>
       </div>
+    </div>
   </body>
 </html>
