--- a/ThaiPham_Loginform_bootstrap/login.html
+++ b/ThaiPham_Loginform_bootstrap/login.html
@@ -12,28 +12,33 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./login.css" />
+    <script src="./login.js"></script>
   </head>
   <body>
     <div class="container">
+      <section id="heading" class="mx-auto">
+        <h1 class="maintitle mx-auto pt-5">Welcome Title</h1>
+      </section>
       <div class="d-flex justify-content-center align-items-center mt-5">
-        <form class="w-50 border needs-validation was-validated" novalidate>
+        <form class="w-50 border">
           <div class="m-3">
             <label for="userName" class="form-label">User Name</label>
-            <input type="text" class="form-control" id="userName" required />
-            <div class="invalid-feedback">Please enter your username.</div>
+            <input type="text" class="form-control" id="userName" />
+            <div class="empty-email-feedback">Please enter your username.</div>
+            <div class="invalid-email-feedback">Please enter valid email.</div>
           </div>
           <div class="m-3">
             <label for="userPassword" class="form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="userPassword"
-              required
-            />
-            <div class="invalid-feedback">Please enter your password.</div>
+            <input type="password" class="form-control" id="userPassword" />
+            <div class="empty-password-feedback">
+              Please enter your username.
+            </div>
+            <div class="invalid-password-feedback">
+              Please enter valid email.
+            </div>
           </div>
           <div class="m-3">
-            <button type="submit" class="btn btn-success w-100">Login</button>
+            <button type="submit" id="login" class="btn btn-success w-100">Login</button>
           </div>
         </form>
       </div>
