update login form bootstrap

--- a/ThaiPham_Loginform_bootstrap/login.html
+++ b/ThaiPham_Loginform_bootstrap/login.html
@@ -47,7 +47,9 @@
               Please enter your password.
             </div>
             <div class="invalid-password-feedback text-danger">
-              Please enter valid password.
+              Password must be more than 8 characters. <br />
+              Password must contain a special symbol : @,#,!...<br />
+              Password must contain a uppercase and a lower case character.<br />
             </div>
           </div>
           <div class="m-3">
