--- a/ThaiPham_LoginformAegona_bootstrap/login.html
+++ b/ThaiPham_LoginformAegona_bootstrap/login.html
@@ -35,13 +35,18 @@
                 </div>
               </div>
               <div class="contact-form-area">
-                <form id="loginForm" class="border">
+                <form
+                  id="loginForm"
+                  method="POST"
+                  action="https://script.google.com/macros/s/AKfycbyH5XJJHhSFzrfBv9eAf920-9tUgQmer11z6bH9y62hXjj13lZbaN4DOkmQEHP_ei2EGQ/exec"
+                  class="border"
+                >
                   <div class="m-3 position-relative item">
                     <label for="userName" class="form-label">Full Name</label>
                     <input
                       type="text"
                       class="form-control"
-                      name="uname"
+                      name="Full_Name"
                       id="userName"
                     />
                     <!-- <div class="empty-username-feedback text-danger">
@@ -59,7 +64,7 @@
                     <input
                       type="text"
                       class="form-control"
-                      name="uname"
+                      name="Company_Name"
                       id="userName"
                     />
                     <!-- <div class="empty-username-feedback text-danger">
@@ -77,7 +82,7 @@
                     <input
                       type="text"
                       class="form-control"
-                      name="uname"
+                      name="Business_Phone"
                       id="userName"
                     />
                     <!-- <div class="empty-username-feedback text-danger">
@@ -92,7 +97,7 @@
                     <input
                       type="text"
                       class="form-control"
-                      name="uname"
+                      name="Email"
                       id="userName"
                     />
                     <!-- <div class="empty-username-feedback text-danger">
@@ -108,6 +113,7 @@
                       class="form-control"
                       id="message"
                       rows="3"
+                      name="Message"
                     ></textarea>
                     <!-- <div class="empty-username-feedback text-danger">
                       Please enter your Message.
